--- a/Demo_UWP_SkiRunRater/MainPage.xaml
+++ b/Demo_UWP_SkiRunRater/MainPage.xaml
@@ -1,24 +1,39 @@
-﻿<Page
-    x:Class="Demo_UWP_SkiRunRater.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Demo_UWP_SkiRunRater"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="Demo_UWP_SkiRunRater.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:Demo_UWP_SkiRunRater"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:data="using:Demo_UWP_SkiRunRater"
+      mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="100" />
         </Grid.RowDefinitions>
 
+        <GridView ItemsSource="{x:Bind SkiRuns}">
+            <GridView.ItemTemplate>
+                <DataTemplate x:DataType="data:SkiRun">
+                    <StackPanel>
+                        <TextBlock FontSize="16"
+                                   Width="200"
+                                   Text="{x:Bind Name}" />
+                        <TextBlock FontSize="16"
+                                   Width="200"
+                                   Text="{x:Bind Vertical}" />
+                    </StackPanel>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
 
         <TextBlock Grid.Row="1"
                    Name="ResultTextBlock"
                    FontSize="14"
                    Foreground="Red"
                    FontWeight="Bold"
+                   Text="Hello John"
                    Margin="0,20,0,0" />
 
     </Grid>
