--- a/Demo_UWP_SkiRunRater/MainPage.xaml
+++ b/Demo_UWP_SkiRunRater/MainPage.xaml
@@ -10,25 +10,32 @@
     <Page.Resources>
         <DataTemplate x:DataType="data:SkiRun"
                       x:Key="SkiRunDataTemplate">
-            <StackPanel HorizontalAlignment="Center"
+            <StackPanel HorizontalAlignment="Left"
+                        VerticalAlignment="Top"
                         BorderBrush="#FFF4B238"
                         BorderThickness="1"
-                        CornerRadius="2"
+                        CornerRadius="5"
                         Background="#FFF4B238"
-                        Opacity="0.6">
+                        Opacity="0.6"
+                        Width="220">
                 <Image Width="200"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Margin="10"
                        Source="{x:Bind SkiRunImage}" />
-                <TextBlock FontSize="16"
-                           Width="200"
-                           Margin="10"
-                           Text="{x:Bind Name}" />
-                <TextBlock FontSize="16"
-                           Width="200"
-                           Margin="10"
-                           Text="{x:Bind Vertical}" />
-                <TextBlock FontSize="16"
-                           Margin="10, 0, 0, 0"
-                           Text="Feet" />
+                <StackPanel Orientation="Vertical">
+                    <TextBlock FontSize="16"
+                               Width="200"
+                               Margin="10"
+                               Text="{x:Bind Name}" />
+                    <TextBlock FontSize="16"
+                               Width="200"
+                               Margin="10"
+                               Text="{x:Bind Vertical}" />
+                    <TextBlock FontSize="16"
+                               Margin="10, 0, 0, 0"
+                               Text="Feet" />
+                </StackPanel>
             </StackPanel>
         </DataTemplate>
     </Page.Resources>
@@ -41,10 +48,11 @@
         </Grid.RowDefinitions>
 
         <GridView ItemsSource="{x:Bind SkiRuns}"
+                  Grid.Row="0"
                   IsItemClickEnabled="True"
                   ItemClick="GridView_ItemClick"
                   ItemTemplate="{StaticResource SkiRunDataTemplate}"
-                  Margin="10,0,-10,0">
+                  Margin="10">
         </GridView>
 
         <TextBlock Grid.Row="1"
@@ -54,6 +62,12 @@
                    FontWeight="Bold"
                    Text="Hello John"
                    Margin="0,20,0,0" />
-
+        <Image Width="200"
+               Name="SkiRunImage"
+               Grid.Row="1"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Top"
+               Margin="10"
+               Source="Assets/ski_run_1.jpg" />
     </Grid>
 </Page>
